RESOLVED FIXED193096
Fix an assertion in UniqueIDBDatabase
https://bugs.webkit.org/show_bug.cgi?id=193096
Summary Fix an assertion in UniqueIDBDatabase
Sihui Liu
Reported 2019-01-02 17:21:50 PST
m_objectStoreTransactionCounts.count(objectStore) == 1 in UniqueIDBDatabase::operationAndTransactionTimerFired() is not necessarily true because m_objectStoreTransactionCounts may be cleared in immediateCloseForUserDelete.
Attachments
Patch (1.76 KB, patch)
2019-01-02 17:24 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-01-02 17:24:26 PST
WebKit Commit Bot
Comment 2 2019-01-11 13:57:52 PST
Comment on attachment 358229 [details] Patch Clearing flags on attachment: 358229 Committed r239872: <https://trac.webkit.org/changeset/239872>
WebKit Commit Bot
Comment 3 2019-01-11 13:57:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-01-11 13:58:29 PST
Note You need to log in before you can comment on or make changes to this bug.