Fix an assertion in UniqueIDBDatabase https://bugs.webkit.org/show_bug.cgi?id=193096

Reviewed by Brady Eidson.

m_objectStoreTransactionCounts.count(objectStore) == 1 in UniqueIDBDatabase::operationAndTransactionTimerFired()
is not necessarily true because m_objectStoreTransactionCounts may be cleared in immediateCloseForUserDelete.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::operationAndTransactionTimerFired):


Canonical link: https://commits.webkit.org/207856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239872 268f45cc-cd09-0410-ab3c-d52691b4dbfc